--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -144,7 +144,7 @@ production:
      # replica set connection setup.
      # Use environment variables or a config file to keep your
      # credentials safe e.g. <%= ENV['MONGOLAB_URI'] %>.
-     uri: <%= ENV['MONGOLAB_URI'] %>
+     uri: <%= ENV['MONGODB_URI'] %>
 
      options:
        # The default timeout is 5, which is the time in seconds
